--- a/index.ipynb
+++ b/index.ipynb
@@ -48,22 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.3333333333333333"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3333333333333333\n"
+     ]
     }
    ],
    "source": [
-    "# Your Solution"
+    "# Your Solution\n",
+    "\n",
+    "# 4 kings out of 12 face cards\n",
+    "print(4/12)"
    ]
   },
   {
@@ -89,44 +89,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
     }
    ],
    "source": [
     "# Part 1\n",
-    "# Your solution"
+    "# Your solution\n",
+    "# BG BB\n",
+    "print(1/2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.3333333333333333"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3333333333333333\n"
+     ]
     }
    ],
    "source": [
     "# Part 2 \n",
-    "# Your solution"
+    "# Your solution\n",
+    "# BG GB BB\n",
+    "print(1/3)"
    ]
   },
   {
@@ -200,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
