automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -169,12 +169,7 @@
     }
    ],
    "source": [
-    "# Your solution\n",
-    "p_pos = (0.01 * 0.99) + (0.99 * 0.01) # \n",
-    "p_pos_dis = 0.99\n",
-    "p_dis = 0.01\n",
-    "\n",
-    "p_pos_dis*p_dis / p_pos"
+    "# Your solution"
    ]
   },
   {
