automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,13 @@
    "metadata": {},
    "source": [
     "## Exercise 2\n",
-    "#### 1. A couple has two children, the older of which is a boy. What is the probability that they have two boys?\n",
+    "#### 1. A couple has two children, the older of which is a boy. What is the probability that they have two boys?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 2. A couple has two children, one of which is a boy. What is the probability that they have two boys?"
    ]
   },
